# src/main/java/io/poleray/api/ApiOriginFilter.java
@@ -13,7 +13,7 @@ public class ApiOriginFilter implements Filter {
         HttpServletResponse res = (HttpServletResponse) response;
         res.addHeader("Access-Control-Allow-Origin", "*");
         res.addHeader("Access-Control-Allow-Methods", "GET, POST, DELETE, PUT");
-        res.addHeader("Access-Control-Allow-Headers", "Content-Type");
+        res.addHeader("Access-Control-Allow-Headers", "Content-Type, X-Api-Token");
         chain.doFilter(request, response);
     }
 
